--- a/Redaction/Beamer/TweetEmbedding_slides.tex
+++ b/Redaction/Beamer/TweetEmbedding_slides.tex
@@ -99,6 +99,9 @@
 \usetikzlibrary{fit,arrows.meta}
 \usepackage{pifont}
 \usepackage{enumitem}
+\setlist[itemize,1]{label = --}
+\setlist[itemize,2]{label = $\circ$}
+\setlist[enumerate,1]{label={\arabic*}}
 \usepackage{lmodern}
 \usepackage{cancel}
 \usepackage{array}
@@ -131,22 +134,28 @@
 \titlepage
 \end{frame}
 
-\section{Introduction}\label{introduction}
+\hypertarget{introduction}{%
+\section{Introduction}\label{introduction}}
 
 \begin{frame}{Introduction}
+\protect\hypertarget{introduction-1}{}
 
 \resizebox{\textwidth}{!}{\input{img/schema_recap.tex}}
 
 \end{frame}
 
-\section{\texorpdfstring{\emph{word2vec}}{word2vec}}\label{word2vec}
+\hypertarget{word2vec}{%
+\section{\texorpdfstring{\emph{word2vec}}{word2vec}}\label{word2vec}}
 
-\section{Évaluation du modèle}\label{uxe9valuation-du-moduxe8le}
+\hypertarget{uxe9valuation-du-moduxe8le}{%
+\section{Évaluation du modèle}\label{uxe9valuation-du-moduxe8le}}
 
+\hypertarget{uxe9valuation-sur-un-corpus-fictif}{%
 \subsection{Évaluation sur un corpus
-fictif}\label{uxe9valuation-sur-un-corpus-fictif}
+fictif}\label{uxe9valuation-sur-un-corpus-fictif}}
 
 \begin{frame}{Comment évaluer le modèle ?}
+\protect\hypertarget{comment-uxe9valuer-le-moduxe8le}{}
 
 \textbf{Problème} : utilisation généralisée des \emph{word-embeddings}
 mais peu de travaux théoriques expliquent ce qui est capturé, comment
@@ -174,6 +183,7 @@ proximité ?
 \end{frame}
 
 \begin{frame}{Évaluation sur un corpus fictif}
+\protect\hypertarget{uxe9valuation-sur-un-corpus-fictif-1}{}
 
 \textbf{Idée} : construire un corpus fictif pour lesquels on connaît le
 résultat attendu en contrôlant les contextes.
@@ -195,6 +205,7 @@ résultat attendu en contrôlant les contextes.
 \end{frame}
 
 \begin{frame}{Résultats de l'évaluation}
+\protect\hypertarget{ruxe9sultats-de-luxe9valuation}{}
 
 \begin{table}[!h]
 \begin{center}
@@ -236,10 +247,12 @@ l'implémentation du modèle semble validée.
 
 \end{frame}
 
+\hypertarget{choix-des-meilleurs-hyperparamuxe8tres-pour-le-moduxe8le}{%
 \subsection{Choix des meilleurs hyperparamètres pour le
-modèle}\label{choix-des-meilleurs-hyperparamuxe8tres-pour-le-moduxe8le}
+modèle}\label{choix-des-meilleurs-hyperparamuxe8tres-pour-le-moduxe8le}}
 
 \begin{frame}{Choix des meilleurs hyperparamètres pour le modèle}
+\protect\hypertarget{choix-des-meilleurs-hyperparamuxe8tres-pour-le-moduxe8le-1}{}
 
 \begin{itemize}
 \item
@@ -265,6 +278,7 @@ modèle}\label{choix-des-meilleurs-hyperparamuxe8tres-pour-le-moduxe8le}
 
 \begin{frame}{Nombre d'epochs, taille de fenêtre et taux
 d'apprentissage}
+\protect\hypertarget{nombre-depochs-taille-de-fenuxeatre-et-taux-dapprentissage}{}
 
 \begin{figure}[htp]
 \begin{center}
@@ -278,6 +292,7 @@ d'apprentissage}
 \end{frame}
 
 \begin{frame}{Valeurs des hyperparamètres retenus}
+\protect\hypertarget{valeurs-des-hyperparamuxe8tres-retenus}{}
 
 \begin{itemize}
 
@@ -301,10 +316,12 @@ peu de différences ici entre 100 et 300 \faArrowCircleRight{}
 
 \end{frame}
 
+\hypertarget{uxe9valuation-sur-le-corpus-de-tweets}{%
 \subsection{Évaluation sur le corpus de
-tweets}\label{uxe9valuation-sur-le-corpus-de-tweets}
+tweets}\label{uxe9valuation-sur-le-corpus-de-tweets}}
 
 \begin{frame}{Évaluation sur le corpus de tweets (1/2)}
+\protect\hypertarget{uxe9valuation-sur-le-corpus-de-tweets-12}{}
 
 \begin{figure}
 \begin{minipage}{.4\textwidth}
@@ -358,7 +375,7 @@ allez (0,43) & vidéo (0,39) & 3 (0,43) & \includegraphics[height=2mm]{img/emoji
 \end{minipage}
 \end{figure}
 
-\pause 
+\pause
 
 \begin{figure}
 \begin{minipage}{.4\textwidth}
@@ -415,6 +432,7 @@ hey (0,47) & princesse (0,64) & 34 (0,53) & 20h (0,54) \tabularnewline
 \end{frame}
 
 \begin{frame}{Évaluation sur le corpus de tweets (2/2)}
+\protect\hypertarget{uxe9valuation-sur-le-corpus-de-tweets-22}{}
 
 \begin{figure}
 \begin{minipage}{.5\textwidth}
@@ -443,12 +461,15 @@ hey (0,47) & princesse (0,64) & 34 (0,53) & 20h (0,54) \tabularnewline
 
 \end{frame}
 
-\section{Indice de sentiments}\label{indice-de-sentiments}
+\hypertarget{indice-de-sentiments}{%
+\section{Indice de sentiments}\label{indice-de-sentiments}}
 
+\hypertarget{pruxe9dire-le-sentiment-dun-tweet}{%
 \subsection{Prédire le sentiment d'un
-tweet}\label{pruxe9dire-le-sentiment-dun-tweet}
+tweet}\label{pruxe9dire-le-sentiment-dun-tweet}}
 
 \begin{frame}{Prédire le sentiment d'un tweet}
+\protect\hypertarget{pruxe9dire-le-sentiment-dun-tweet-1}{}
 
 \textbf{Idée} : associer à chaque tweet un sentiment qui vaut 1 s'il est
 positif et 0 s'il est négatif.
@@ -467,6 +488,7 @@ les transports urbains, contenant 23 000 tweets, séparée en une base de
 \end{frame}
 
 \begin{frame}{Modèle lexical : sentiment moyen des mots}
+\protect\hypertarget{moduxe8le-lexical-sentiment-moyen-des-mots}{}
 
 Le sentiment prédit d'un tweet \(t\) composé de \(n\) mots sera :
 \[S_{1,\gamma}(t) = 1\left\{ \frac{1}{n} \sum \limits_{i=1}^n \alpha_i \geq \gamma\right\}  \qquad \in \{ 0,1 \}\]
@@ -484,6 +506,7 @@ base de train : on trouve \(\gamma^*\) = -0.14 pour une \emph{accuracy}
 
 \begin{frame}{Modèle logit : prédiction grâce aux
 \emph{word-embeddings}}
+\protect\hypertarget{moduxe8le-logit-pruxe9diction-gruxe2ce-aux-word-embeddings}{}
 
 \[
 Y_i = 1\left\{ \sum_{i = 1}^n \beta_i X_{i,j} + \varepsilon_i \geq 0 \right\} 
@@ -500,6 +523,7 @@ Y_i = 1\left\{ \sum_{i = 1}^n \beta_i X_{i,j} + \varepsilon_i \geq 0 \right\}
 \end{frame}
 
 \begin{frame}{Spécifications du modèle logit}
+\protect\hypertarget{spuxe9cifications-du-moduxe8le-logit}{}
 
 Plusieurs problèmes à traiter :
 
@@ -526,35 +550,44 @@ base de train : on trouve \(\gamma^*\) = 0.5 pour une \emph{accuracy}
 \end{frame}
 
 \begin{frame}{Limites des modèles utilisés}
+\protect\hypertarget{limites-des-moduxe8les-utilisuxe9s}{}
 
 La bonne performance du modèle lexical par rapport au modèle logit peut
 s'expliquer par plusieurs facteurs.
 
 \begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
 \tightlist
 \item
-  Les mots inconnus diffèrent selon les modèles.
+  Les mots inconnus diffèrent selon les modèles. Modèle lexical : 1,4 \%
+  des mots sont inconnus (13,2 \% du vocabulaire) Modèle logit : 4,6 \%
+  des mots sont inconnus (36,2 \% du vocabulaire)
 \end{enumerate}
 
-Modèle lexical : 1,4 \% des mots sont inconnus (13,2 \% du vocabulaire)
+\pause
 
-Modèle logit : 4,6 \% des mots sont inconnus (36,2 \% du vocabulaire)
+\begin{enumerate}
+\setcounter{enumi}{1}
+\tightlist
+\item
+  Le processus d'annotation utilisé pour les tweets sur les transports
+  urbains.
+\end{enumerate}
 
 \pause
-2. Le processus d'annotation utilisé pour les tweets sur les transports
-urbains.
 
-\pause
-3. Le \emph{domain shift}
-
-\pause  Utilisation d'une nouvelle base de test indépendante pour
-essayer de neutraliser ces effets : \textbf{modèle logit meilleur que le
-modèle lexical} (61,9~\% contre 55,9~\%).
+\begin{enumerate}
+\setcounter{enumi}{2}
+\tightlist
+\item
+  Le \emph{domain shift} \pause Utilisation d'une nouvelle base de test
+  indépendante pour essayer de neutraliser ces effets : \textbf{modèle
+  logit meilleur que le modèle lexical} (61,9~\% contre 55,9~\%).
+\end{enumerate}
 
 \end{frame}
 
 \begin{frame}{Merci pour votre attention}
+\protect\hypertarget{merci-pour-votre-attention}{}
 
 \href{https://github.com/ARKEnsae/TweetEmbedding}{\faGithub{} ARKEnsae/TweetEmbedding}
 
